app/client/src/pages/Editor/ActionForm/Section/styles.module.css
.section {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 800px;
  align-items: center;
  justify-content: center;
  container: uqi-section / inline-size;
}

.section[data-standalone="false"] {
  padding-block: var(--ads-v2-spaces-6);
}

.section[data-standalone="false"]:not(:last-child) {
  border-bottom: 1px solid var(--ads-v2-color-border);
}

